--- a/ServiceStackSpikes/OrmLiteConsole/OrmLiteConsole.csproj
+++ b/ServiceStackSpikes/OrmLiteConsole/OrmLiteConsole.csproj
@@ -77,6 +77,11 @@
   <ItemGroup>
     <Compile Include="Assignee.cs" />
     <Compile Include="AssigneeManager.cs" />
+    <Compile Include="BooleanParameterStrategy.cs" />
+    <Compile Include="GuidParameterStrategy.cs" />
+    <Compile Include="IntParameterStrategy.cs" />
+    <Compile Include="IParameterStrategy.cs" />
+    <Compile Include="ParameterStrategyFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -84,10 +89,14 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SqlBuilder.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="StringParameterStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
